--- a/Bdf.NHibernate/Bdf.NHibernate.csproj
+++ b/Bdf.NHibernate/Bdf.NHibernate.csproj
@@ -7,11 +7,13 @@
     <ProjectGuid>{C5E716FF-DEC0-48B4-B698-3FA484EB7D28}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wdf.NHibernate</RootNamespace>
-    <AssemblyName>Wdf.NHibernate</AssemblyName>
+    <RootNamespace>Bdf.NHibernate</RootNamespace>
+    <AssemblyName>Bdf.NHibernate</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,7 +67,7 @@
     <Compile Include="EntityMappings\EntityMapWithTEntity.cs" />
     <Compile Include="EntityMappings\EntityMapWithTEntityAndTPrimaryKey.cs" />
     <Compile Include="EntityMappings\NhMappingExtensions.cs" />
-    <Compile Include="Interceptors\WdfNHibernateInterceptor.cs" />
+    <Compile Include="Interceptors\BdfNHibernateInterceptor.cs" />
     <Compile Include="ISessionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\NhRepositoryBaseWithTEntity.cs" />
@@ -86,6 +88,13 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
