--- a/Bdf.RedisCache/Bdf.RedisCache.csproj
+++ b/Bdf.RedisCache/Bdf.RedisCache.csproj
@@ -7,11 +7,13 @@
     <ProjectGuid>{3FD6E4DF-7CCB-4A39-98A0-5A6F73F4285A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wdf.RedisCache</RootNamespace>
-    <AssemblyName>Wdf.RedisCache</AssemblyName>
+    <RootNamespace>Bdf.RedisCache</RootNamespace>
+    <AssemblyName>Bdf.RedisCache</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,13 +47,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\IWdfRedisConnectionProvider.cs" />
-    <Compile Include="Configuration\WdfRedisConnectionProvider.cs" />
+    <Compile Include="Configuration\IBdfRedisConnectionProvider.cs" />
+    <Compile Include="Configuration\BdfRedisConnectionProvider.cs" />
     <Compile Include="Extensions\RedisDatabaseExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RedisImpl\WdfRedisCacheManager.cs" />
+    <Compile Include="RedisImpl\BdfRedisCacheManager.cs" />
     <Compile Include="SerializeUtil.cs" />
-    <Compile Include="RedisImpl\WdfRedisCache.cs" />
+    <Compile Include="RedisImpl\BdfRedisCache.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -64,6 +66,13 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
