--- a/Bdf/Bdf.csproj
+++ b/Bdf/Bdf.csproj
@@ -7,11 +7,13 @@
     <ProjectGuid>{9F09D038-06A2-4725-988B-F8A674AFA31E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WDF</RootNamespace>
-    <AssemblyName>WDF</AssemblyName>
+    <RootNamespace>Bdf</RootNamespace>
+    <AssemblyName>Bdf</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -95,17 +97,16 @@
     <Compile Include="Application\Services\Dto\NullableIdInput.cs" />
     <Compile Include="Application\Services\Dto\PagedResultOutput.cs" />
     <Compile Include="Application\Services\IApplicationService.cs" />
-    <Compile Include="Application\Services\WdfServiceBase.cs" />
+    <Compile Include="Application\Services\BdfServiceBase.cs" />
     <Compile Include="Collections\Extensions\CollectionExtensions.cs" />
     <Compile Include="Collections\Extensions\DictionaryExtensions.cs" />
     <Compile Include="Collections\Extensions\EnumerableExtensions.cs" />
-    <Compile Include="Collections\Extensions\ListExtensions.cs" />
     <Compile Include="Configuration\DictionayBasedConfig.cs" />
     <Compile Include="Configuration\IDictionaryBasedConfig.cs" />
     <Compile Include="Configuration\Startup\EventBusConfiguration.cs" />
-    <Compile Include="Configuration\Startup\IWdfStartupConfiguration.cs" />
+    <Compile Include="Configuration\Startup\IBdfStartupConfiguration.cs" />
     <Compile Include="Configuration\Startup\IEventBusConfiguration.cs" />
-    <Compile Include="Configuration\Startup\WdfStartupConfiguration.cs" />
+    <Compile Include="Configuration\Startup\BdfStartupConfiguration.cs" />
     <Compile Include="Dependency\BasicConventionalRegistrar.cs" />
     <Compile Include="Dependency\ConventionalRegistrationConfig.cs" />
     <Compile Include="Dependency\ConventionalRegistrationContext.cs" />
@@ -115,7 +116,7 @@
     <Compile Include="Dependency\IIocManager.cs" />
     <Compile Include="Dependency\IIocRegistrar.cs" />
     <Compile Include="Dependency\IIocResolver.cs" />
-    <Compile Include="Dependency\Installers\WdfCoreInstaller.cs" />
+    <Compile Include="Dependency\Installers\BdfCoreInstaller.cs" />
     <Compile Include="Dependency\IocManager.cs" />
     <Compile Include="Dependency\IocRegistrarExtensions.cs" />
     <Compile Include="Dependency\ISingletonDependency.cs" />
@@ -147,7 +148,7 @@
     <Compile Include="Domain\Entities\IEntityWithPrimaryKey.cs" />
     <Compile Include="Domain\Entities\IPassivable.cs" />
     <Compile Include="Domain\Entities\ISoftDelete.cs" />
-    <Compile Include="Domain\Repositories\WdfRepositoryBase.cs" />
+    <Compile Include="Domain\Repositories\BdfRepositoryBase.cs" />
     <Compile Include="Domain\Repositories\IRepository.cs" />
     <Compile Include="Domain\Repositories\IRepositoryWithTEntity.cs" />
     <Compile Include="Domain\Repositories\IRepositoryWithTEntityAndTPrimaryKey.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Runtime\Caching\CacheBase.cs" />
     <Compile Include="Runtime\Caching\CacheExtensions.cs" />
     <Compile Include="Runtime\Caching\CacheManagerBase.cs" />
+    <Compile Include="Runtime\Caching\CacheManagerExtensions.cs" />
     <Compile Include="Runtime\Caching\Configuration\CacheConfigurator.cs" />
     <Compile Include="Runtime\Caching\Configuration\CachingConfiguration.cs" />
     <Compile Include="Runtime\Caching\Configuration\ICacheConfigurator.cs" />
@@ -214,23 +216,24 @@
     <Compile Include="Runtime\Caching\ICache.cs" />
     <Compile Include="Runtime\Caching\ICacheManager.cs" />
     <Compile Include="Runtime\Caching\ITypedCache.cs" />
-    <Compile Include="Runtime\Caching\Memory\WdfMemoryCache.cs" />
-    <Compile Include="Runtime\Caching\Memory\WdfMemoryCacheManager.cs" />
+    <Compile Include="Runtime\Caching\Memory\BdfMemoryCache.cs" />
+    <Compile Include="Runtime\Caching\Memory\BdfMemoryCacheManager.cs" />
     <Compile Include="Runtime\Caching\TypedCacheExtensions.cs" />
     <Compile Include="Runtime\Caching\TypedCacheWrapper.cs" />
-    <Compile Include="Runtime\Session\IWdfSession.cs" />
+    <Compile Include="Runtime\Session\IBdfSession.cs" />
     <Compile Include="Runtime\Session\NullWdfSession.cs" />
-    <Compile Include="Runtime\Session\WdfSessionExtensions.cs" />
+    <Compile Include="Runtime\Session\BdfSessionExtensions.cs" />
     <Compile Include="Runtime\Validation\DisableValidationAttribute.cs" />
     <Compile Include="Runtime\Validation\ICustomValidate.cs" />
     <Compile Include="Runtime\Validation\IShouldNormalize.cs" />
     <Compile Include="Runtime\Validation\IValidate.cs" />
     <Compile Include="Runtime\Validation\ValidationInterceptorRegistrar.cs" />
-    <Compile Include="Runtime\Validation\WdfValidationException.cs" />
+    <Compile Include="Runtime\Validation\BdfValidationException.cs" />
     <Compile Include="Threading\AsyncHelper.cs" />
     <Compile Include="Threading\Extensions\LockExtensions.cs" />
     <Compile Include="Threading\InternalAsyncHelper.cs" />
     <Compile Include="Timing\ClockManager.cs" />
+    <Compile Include="Timing\DateTimeRange.cs" />
     <Compile Include="Timing\IClockProvider.cs" />
     <Compile Include="Timing\IDateTimeRange.cs" />
     <Compile Include="Timing\LocalClockProvider.cs" />
@@ -256,10 +259,10 @@
     <Compile Include="Uow\UnitOfWorkRegistrar.cs" />
     <Compile Include="Utils\NullDisposable.cs" />
     <Compile Include="Utils\RandomHelper.cs" />
-    <Compile Include="WdfConsts.cs" />
-    <Compile Include="WdfException.cs" />
-    <Compile Include="WdfInitializationException.cs" />
-    <Compile Include="WdfServiceBase.cs" />
+    <Compile Include="BdfConsts.cs" />
+    <Compile Include="BdfException.cs" />
+    <Compile Include="BdfInitializationException.cs" />
+    <Compile Include="BdfServiceBase.cs" />
     <Compile Include="Xml\Extensions\XmlExtensions.cs" />
   </ItemGroup>
   <ItemGroup />
@@ -267,6 +270,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
