--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,12 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Bdf.EntityFramework.Tests\packages.config" />
+  <repository path="..\Bdf.EntityFramework\packages.config" />
+  <repository path="..\Bdf.MemoryDb.Tests\packages.config" />
+  <repository path="..\Bdf.MongoDB\packages.config" />
+  <repository path="..\Bdf.NHibernate.Tests\packages.config" />
+  <repository path="..\Bdf.NHibernate\packages.config" />
+  <repository path="..\Bdf.RedisCache.Tests\packages.config" />
+  <repository path="..\Bdf.RedisCache\packages.config" />
   <repository path="..\Bdf.Sample.Web.API\packages.config" />
   <repository path="..\Bdf.Sample.Web.Mvc\packages.config" />
-  <repository path="..\Wdf.EntityFramework\packages.config" />
-  <repository path="..\Wdf.MongoDB\packages.config" />
-  <repository path="..\Wdf.NHibernate\packages.config" />
-  <repository path="..\Wdf.RedisCache\packages.config" />
-  <repository path="..\Wdf.Sample.Web.API\packages.config" />
-  <repository path="..\Wdf.Sample.Web.Mvc\packages.config" />
-  <repository path="..\Wdf\packages.config" />
+  <repository path="..\Bdf.Tests\packages.config" />
+  <repository path="..\Bdf\packages.config" />
 </repositories>
