--- a/Sample/Bdf.Sample.Web.Mvc/Bdf.Sample.Web.Mvc.csproj
+++ b/Sample/Bdf.Sample.Web.Mvc/Bdf.Sample.Web.Mvc.csproj
@@ -242,10 +242,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Admin\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bdf\Bdf.csproj">
+      <Project>{9f09d038-06a2-4725-988b-f8a674afa31e}</Project>
+      <Name>Bdf</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
